<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_manufacturer" />

            <TextView
                android:id="@+id/manufacturer_name"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_firmware_version" />

            <TextView
                android:id="@+id/firmware_version"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_hardware_version" />

            <TextView
                android:id="@+id/hardware_version"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>

        
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_serial_number" />

            <TextView
                android:id="@+id/serial_number"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>
        
              <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:text="@string/label_switch" />

            <TextView
                android:id="@+id/mechanical_switch"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>
        
              <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_battery_level"
                android:textColor="@color/action_text" />

            <TextView
                android:id="@+id/battery_level"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>
        
              <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_remote_rssi"
                android:textColor="@color/action_text" />

            <TextView
                android:id="@+id/remote_rssi"
                android:layout_width="0dp"
                android:layout_weight="1" />
        </TableRow>
        
                  </TableLayout>

</ScrollView>